Grammar fixes for kara/spltiwise/summerfest projects

--- a/Karamatsu.html
+++ b/Karamatsu.html
@@ -117,8 +117,7 @@
 
                     <h3>Modelling</h3>
                     
-                    <p> In between iterating our storyboard, each one of us started on modelling the different objects we would need to include in our animation. I was in charge of modelling the main items in our protagonist's room that they will interact with, namely the night stand and the desk setup which includes the desk itself, computer screens, a mouse and keyboard and finally the keyboard itself. 
-                    </p>
+                    <p>In between iterating our storyboard, each one of us started modelling the different objects we would need to include in our animation. I was in charge of modelling the main items in our protagonist's room that they will interact with, namely the nightstand and the desk setup which includes the desk itself, computer screens, a mouse and keyboard and finally the keyboard itself.</p>
                     <div class="grid project-card-2c static-img">
 
                         <!-- Render -->
@@ -165,7 +164,7 @@
                     <h2>Challenge</h2> 
                     <h3>Maya nParticles issue</h3>
                     <p>Among various issues with Maya that I encountered during the project, one issue stands out in the outro scene of our animation where I wanted to simulate a gush of wind blowing sakura petals from outside to make the curtains move and flower petals go from the outside into the room through the use of Maya's nParticles and nCloth systems respectively.</p>
-                    <p> However, in the process, I ran into issues with the nParticles systems, namely it not displaying the flower petals properly but instead showed a white sphere even though we added the flower object so that Maya would be able to generate more flower petals flying into the shot. Another issue was that the nCloth effect not simulating properly during render although it was working as intended in the viewport render, as it would stay at its first frame position as the scene goes on.</p>
+                    <p>However, in the process, I ran into issues with the nParticles systems, namely it did not display the flower petals properly but instead showed a white sphere even though we added the flower object so that Maya would be able to generate more flower petals flying into the shot. Another issue was that the nCloth effect not simulating properly during render although it was working as intended in the viewport render, as it would stay at its first frame position as the scene went on.</p>
                     
                     <figure class="figure-analysis project-img">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img/karamatsu/SphereShot.webm" src="img/karamatsu/SphereShot_100.png" autoplay loop playsinline muted aria-label="nParticles showing up as spheres instead of petals" controls="controls"></video>
@@ -257,7 +256,7 @@
 
             <section class="project-analysis" id="Keytakeaways">
                 <h2>Reflection</h2>
-                <p>As this was my first time 3D modelling and animating, I definitely feel that I could have done some parts more efficiently such as just using a transparent object to simulate the water dropplet instead of using Bifrost as it would make rendering the scene easier. However, through this project, I have learned the basic principles of 3D modelling and animation which could be transfered over a different 3D modelling program such as Blender. </p>
+                <p>As this was my first-time 3D modelling and animating, I definitely feel that I could have done some parts more efficiently such as just using a transparent object to simulate the water dropplet instead of using Bifrost as it would make rendering the scene easier. However, through this project, I have learned the basic principles of 3D modelling and animation which could be transferred over a different 3D modelling program such as Blender.</p>
             </section>
 
             <section class="more-project">
