--- a/summerfest.html
+++ b/summerfest.html
@@ -86,14 +86,14 @@
         <main>
             <section class="project-analysis" id="Background">
                 <h2>Background</h2>
-                <p><a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">The SFU Summer Festival</a> (or Summerfest is I like to call it) is an annual event hosted by the SFU Anime Club with the goal to provide local anime fans with the opportunity to experience a Japanese “Matsuri” style festival in Vancouver. Being a member of the SFU Anime Club community, I have been a part of the Summerfest planning committee since 2018, working as their Social Media Coordinator, Graphic and Motion Designer and their in-house photographer on the day of the event! Through being a part of Summerfest, I was able to hone my skills as a designer on a regular basis.</p>
-                <p>As this is an on-going project and encompass different design aspects, this page will be going over an overview of what I did for each role at the SFU Summer Festival.</p>
+                <p><a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">The SFU Summer Festival</a> (or Summerfest as I like to call it) is an annual event hosted by the SFU Anime Club with the goal of providing local anime fans with the opportunity to experience a Japanese “Matsuri” style festival in Vancouver. Being a member of the SFU Anime Club community, I have been a part of the Summerfest planning committee since 2018, working as their Social Media Coordinator, Graphic and Motion Designer and in-house photographer on the day of the event! Through being a part of Summerfest, I was able to hone my skills as a designer on a regular basis.</p>
+                <p>As this is an ongoing project and encompasses different design aspects, this page will go over an overview of what I did for each role at the SFU Summer Festival.</p>
             </section>
             <section class="project-analysis">
                 <h2>Design Work</h2>
                 <div class="graphics">
                     <h3>Still Graphics</h3>
-                    <p>Ever since starting from 2018, I have been helping create different still graphics to complement our social media post on the Summerfest social media to help inform the upcoming event goers and advertise the event to a wider audience. This includes graphics regarding the prizes for the event raffle, reminder posts about the event and different social media banners and profile. Bellow are a few notable graphics I've created for the 2022 Summerfest!</p>
+                    <p>Starting in 2018, I have been helping create different still graphics to complement our social media posts on the Summerfest social media to help inform the upcoming event goers and advertise the event to a wider audience. This includes graphics regarding the prizes for the event raffle, reminder posts about the event and different social media banners and profiles. Below are a few notable graphics I've created for the 2022 Summerfest!</p>
 
                     <figure class="figure-analysis project-img static-img" >
                         <img alt="2022 Summer Festival Cosplay Contest" class="lazy js-off" src="img/summerfest/cosplaycontest_100.png"
@@ -148,7 +148,7 @@
                             </figure>
                     </div>
                     <h3>Motion Graphics</h3>
-                    <p>As my interests with motion graphics grew, I also volunteered to create different promotional videos for the event as well, namely creating a video celebrating the event's 10th anniversary and animating the event poster using the techinques similar to the one I created for <a href="icebreaker.html" class="in-text-link" target="_blank">the SFU Anime Club's Icebreaker.</a>
+                    <p>As my interest in motion graphics grew, I also volunteered to create different promotional videos for the event as well, namely creating a video celebrating the event's 10th anniversary and animating the event poster using techniques similar to the one I created for <a href="icebreaker.html" class="in-text-link" target="_blank">the SFU Anime Club's Icebreaker.</a>
                     </p>
 
                     <figure class="project-img figure-analysis">
@@ -218,11 +218,10 @@
 
                 <div class="socmed">
                     <h2>Social Media </h2>
-                    <p>Since I have been helping manage <a href="https://www.facebook.com/anitrendzplus" class="in-text-link" target="_blank">the Anime Trending+</a> Facebook page, I wanted to expand my social media skills by taking charge of the Summerfest social media channels on X (formally known as Twitter), Facebook, Instagram and help the event grow by reaching more people. In addition, through engaging with the local convention community, responding to their questions in DMs and comments on posts, I was also able to improve my social skills along the way!</p>
-                    <!-- insert screenshots of the Summerfest insta, fb, twitter page?  -->
+                    <p>Since I have been helping manage <a href="https://www.facebook.com/anitrendzplus" class="in-text-link" target="_blank">the Anime Trending+</a> Facebook page, I wanted to expand my social media skills by taking charge of the Summerfest social media channels on X (formally known as Twitter), Facebook, and Instagram and help the event grow by reaching more people. In addition, through engaging with the local convention community, responding to their questions in DMs and commenting on posts, I was also able to improve my social skills along the way!</p>
+
                     <div class="grid project-card-2c static-img">
 
-                        <!-- Ren -->
                             <figure class="figure-analysis project-img">
                                 <img alt="Ren's Reference Sheet" class="lazy js-off" src="img/summerfest/sfest_X_100.png"
                                 data-src="img/summerfest/sfest_X_400.png"
@@ -241,7 +240,6 @@
                                 <figcaption class="caption-analysis">The Summer Festival's <a href="https://twitter.com/SFUSummerFest" class="in-text-link" target="_blank">Twitter/X</a></figcaption>
                             </figure>
 
-                        <!-- Ayumi -->
                             <figure class="figure-analysis project-img">
                                 <img alt="Ayumi's Reference Sheet" class="lazy js-off" src="img/summerfest/sfest_insta_100.png"
                                 data-src="img/summerfest/sfest_insta_400.png"
@@ -266,7 +264,7 @@
 
                 <div class="photography">
                     <h2>Photography</h2>
-                    <p>In addition to helping the event through creating assets and graphics on social media, I was also one of the photographer for the SFU Summer Festival on the day of the event. This gave me the chance to interact with the community in person through taking photos of different moments of the events and enjoying the results of the entire Summer Festival planning committee hard work. Below are a few of my favorite photos that I took from the 2022 Summer Festival!</p>
+                    <p>In addition to helping the event by creating assets and graphics on social media, I was also one of the photographers for the SFU Summer Festival on the day of the event. This gave me the chance to interact with the community in person by taking photos of different moments of the events and enjoying the results of the entire Summer Festival planning committee's hard work. Below are a few of my favourite photos that I took from the 2022 Summer Festival!</p>
                     
                     <div class="grid project-card-2c static-img">
 
