--- a/Splitwise.html
+++ b/Splitwise.html
@@ -83,13 +83,13 @@
             <section class="project-analysis" id="Background">
                 <h2>Background</h2>
                 <!-- Update fureverhome link when finish -->
-                <p>The Splitwise Feature Design is a project for an Interaction Design university course that aims to fimilarize ourselves with working on an existing design system before developing a new design system in a later project with <a href="#" class="in-text-link">Fureverhome</a>. My team and I were assigned to research and create a new feature for <a href="https://www.splitwise.com/" class="in-text-link" target="_blank">Splitwise</a>, a payment app that automatically calculates multiple bills and splits expenses for a group of people.</p>
+                <p>The Splitwise Feature Design is a project for an Interaction Design university course that aims to familiarise ourselves with working on an existing design system before developing a new design system in a later project with <a href="#" class="in-text-link">Fureverhome</a>. My team and I were assigned to research and create a new feature for <a href="https://www.splitwise.com/" class="in-text-link" target="_blank">Splitwise</a>, a payment app that automatically calculates multiple bills and splits expenses for a group of people.</p>
             </section>
             <section class="project-analysis" id="Process">
                 <h2>Process</h2>
                 <div class="Research">
                     <h3>Research</h3>
-                    <p>To start our research for the app, we first looked at the app itself, studying its existing design system and interaction. Afterwards, each of us conducted secondary research online to find potential problem with Splitwise currently, this would help us narrow down our scope and assist us with indentifying what we wanted to look at during our primary research being user interviews and observing users interacting with the app.</p>
+                    <p>To start our research for the app, we first looked at the app itself, studying its existing design system and interaction. Afterwards, each of us conducted secondary research online to find potential problems with Splitwise currently, this would help us narrow down our scope and assist us with identifying what we wanted to look at during our primary research being user interviews and observing users interacting with the app.</p>
                     <figure class="figure-analysis project-img static-img" >
                         <img alt="Splitwise Style Guide" class="lazy js-off" src="img/Splitwise/designelement_100.png"
                         data-src="img/Splitwise/designelement_400.png"
@@ -127,7 +127,7 @@
                         <figcaption class="caption-analysis">Splitwise competitive analysis</figcaption>
                     </figure> 
                     <h3>User Interviews & Initial Ideas</h3>
-                    <p>To get a better understanding what frustrations current users have with Splitwise, we conducted two rounds of user interviews with 7 participants each times. While there were various issue and potential improvements to the app that the interviewee would like to be implemented, we found common responses highlighted in the photo below</p>
+                    <p>To get a better understanding of what frustrations current users have with Splitwise, we conducted two rounds of user interviews with 7 participants each time. While there were various issues and potential improvements to the app that the interviewee would like to be implemented, we found common responses highlighted in the photo below.</p>
                     <figure class="figure-analysis static-img" >
                         <img alt="User Interview Highlights" class="lazy js-off" src="img/Splitwise/SplitwiseResearch_100.png"
                         data-src="img/Splitwise/SplitwiseResearch_400.png"
@@ -145,7 +145,7 @@
                         </noscript>
                         <figcaption class="caption-analysis">User Interview Highlights</figcaption>
                     </figure>
-                    <p>Through interviewing users, our team came up with 3 initial ideas: A preferred payment info to let people know how to pay someone, an import spreadsheet feature to help new users coming from other expense tracking app and finally a location based currecy feature that automatically changes the currency based on the user's location and numbering format of a specific currency.</p>
+                    <p>Through interviewing users, our team came up with 3 initial ideas: A preferred payment info to let people know how to pay someone, an import spreadsheet feature to help new users coming from other expense tracking apps and finally a location-based currency feature that automatically changes the currency based on the user's location and numbering format of a specific currency.</p>
                     <figure class="figure-analysis static-img" >
                         <img alt="Initial 3 ideas" class="lazy js-off" src="img/Splitwise/features_roundup_100.png"
                         data-src="img/Splitwise/features_roundup_400.png"
@@ -168,7 +168,7 @@
                 <div class="final-proposal">
                     <h2>Final Proposal</h2>
                     <h3>Selected Idea and Persona</h3>
-                    <p>After doing a second round of user interviews in combination with feedback from the teaching staff, our team decided to go ahead with the payment information idea with an added functionality being a 2-way verification feature. And in the process, to help us visualize our users, we formed final persona below.</p>
+                    <p>After doing a second round of user interviews in combination with feedback from the teaching staff, our team decided to go ahead with the payment information idea with an added functionality being a 2-way verification feature. In the process, to help us visualize our users, we formed the final persona below.</p>
                      <figure class="figure-analysis static-img" >
                         <img alt="Final mini persona" class="lazy js-off" src="img/Splitwise/persona_100.png"
                         data-src="img/Splitwise/persona_400.png"
@@ -271,7 +271,7 @@
 
             <section class="project-analysis" id="Keytakeaways">
                 <h2>Reflection</h2>
-                <p>Through working on this project, I have gain experience with working with an existing visual and interaction design system. It has also reaffirm the importance of designing for actual users needs and not simply using assumption from the design team!</p>
+                <p>Through working on this project, I have gained experience with working with an existing visual and interaction design system. It has also reaffirmed the importance of designing for actual users' needs and not simply using assumptions from the design team!</p>
             </section>
 
             <section class="more-project">
