Added image captions

--- a/summerfest.html
+++ b/summerfest.html
@@ -96,20 +96,20 @@
                     <p>Starting in 2018, I have been helping create different still graphics to complement our social media posts on the Summerfest social media to help inform the upcoming event goers and advertise the event to a wider audience. This includes graphics regarding the prizes for the event raffle, reminder posts about the event and different social media banners and profiles. Below are a few notable graphics I've created for the 2022 Summerfest!</p>
 
                     <figure class="figure-analysis project-img static-img" >
-                        <img alt="2022 Summer Festival Cosplay Contest" class="lazy js-off" src="img/summerfest/cosplaycontest_100.png"
+                        <img alt="2022 Summer Festival Cosplay Contest Graphic" class="lazy js-off" src="img/summerfest/cosplaycontest_100.png"
                         data-src="img/summerfest/cosplaycontest_400.png"
                         data-srcset="img/summerfest/cosplaycontest_400.png 400w,
                                      img/summerfest/cosplaycontest_800.png 800w,
                                      img/summerfest/cosplaycontest_1080.png 1080w"
                         data-sizes="100w">
                         <noscript>
-                            <img src="img/Splitwise/designelement_400.png" alt="2022 Summer Festival Cosplay Contest"
+                            <img src="img/Splitwise/designelement_400.png" alt="2022 Summer Festival Cosplay Contest Graphic"
                             srcset="img/summerfest/cosplaycontest_400.png 400w,
                                     img/summerfest/cosplaycontest_800.png 800w,
                                     img/summerfest/cosplaycontest_1080.png 1080w" 
-                            sizes="(min-width: 74rem) 50vw, 100vw"
-                            >
+                            sizes="(min-width: 74rem) 50vw, 100vw">
                         </noscript>
+                        <figcaption class="caption-analysis">2022 Summer Festival Cosplay Contest Graphic</figcaption>
                     </figure>
                     <div class="grid project-card-2c static-img">
 
@@ -128,6 +128,7 @@
                                     sizes="(min-width: 74rem) 50vw, 100vw"
                                     >
                                 </noscript>
+                                <figcaption class="caption-analysis">2022 Summer Festival Countdown Graphic</figcaption>
                             </figure>
 
                             <figure class="figure-analysis project-img">
@@ -145,11 +146,11 @@
                                     sizes="(min-width: 74rem) 50vw, 100vw"
                                     >
                                 </noscript>
+                                <figcaption class="caption-analysis">2022 Summer Festival Prize Graphic</figcaption>
                             </figure>
                     </div>
                     <h3>Motion Graphics</h3>
-                    <p>As my interest in motion graphics grew, I also volunteered to create different promotional videos for the event as well, namely creating a video celebrating the event's 10th anniversary and animating the event poster using techniques similar to the one I created for <a href="icebreaker.html" class="in-text-link" target="_blank">the SFU Anime Club's Icebreaker.</a>
-                    </p>
+                    <p>As my interest in motion graphics grew, I also volunteered to create different promotional videos for the event as well, namely creating a video celebrating the event's 10th anniversary (click <a href="https://www.youtube.com/watch?v=pKl89KqK18U" class="in-text-link" target="_blank">here</a> to watch the full video) and animating the event poster using techniques similar to the one I created for <a href="icebreaker.html" class="in-text-link" target="_blank">the SFU Anime Club's Icebreaker.</a> </p>
 
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img/summerfest/Summerfest_OnlineTeaser.webm" src="img/summerfest/Summerfest_OnlineTeaser_100.png" autoplay loop playsinline muted aria-label="The Summer Festival 2019 Teaser" controls="controls"></video>
