Added resume link

--- a/icebreaker.html
+++ b/icebreaker.html
@@ -25,7 +25,7 @@
                 <div class="nav-grid-text grid nav-button add-gutters">
                     <a href="index.html#Featured_Project" class="nav-item">Works</a>
                     <a href="about.html" class="nav-item">About</a>
-                    <a href="#" class="nav-item">Resume</a>
+                    <a href="https://drive.google.com/file/d/1_7IwkXYrgivNkrfzmJT4NRy8aM7-Vd8J/view?usp=sharing" class="nav-item" target="_blank">Resume</a>>
                 </div>
 
             </nav>
