Add spltiwise figma embed onto splitwise project

--- a/Splitwise.html
+++ b/Splitwise.html
@@ -227,7 +227,7 @@
                             </figure>
                     </div>
                     <h3>Final Prototype</h3>
-                    <p>When making the final prototype in Figma, I wanted to showcase the different scenarios that users might go through and as such I suggested to my team to create 3 different flows and created screens for Alex's POV which can be seen through the videos below or through the <a href="https://www.figma.com/proto/VAOcVBcGSAwZ7D1VLTh5q4/Feature-Design-Project?page-id=321%3A1562&type=design&node-id=555-1812&viewport=408%2C212%2C0.07&t=ei9dj8wMqRt0bs0a-1&scaling=scale-down&starting-point-node-id=555%3A1812&show-proto-sidebar=1&mode=design" class="in-text-link" target="_blank">interactive prototype!</a></p>
+                    <p>When making the final prototype in Figma, I wanted to showcase the different scenarios that users might go through and as such I suggested to my team to create 3 different flows and created screens for Alex's POV which can be seen through the videos below or through the <a href="https://www.figma.com/proto/g1tXkHHChjyNEs63AG7rjh/Splitwise-Feature-Design-(public)?page-id=321%3A1562&type=design&node-id=555-1812&viewport=-468%2C-86%2C0.27&t=UmL2dw9ue8BygXPA-1&scaling=scale-down&starting-point-node-id=555%3A1812&show-proto-sidebar=1&mode=design" class="in-text-link" target="_blank">interactive prototype!</a></p>
 
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img/Splitwise/prototype_2phones.webm" src="img/Splitwise/SplitwisePrototype_100.png" autoplay loop playsinline muted aria-label="Splitwise's settling up and 2 way verification prototype" controls="controls"></video>
@@ -265,7 +265,12 @@
                             >
                         </noscript>
                         <figcaption class="caption-analysis">Splitwise's adding preferred payment prototype</figcaption>
-                    </figure> 
+                    </figure>
+                    
+                    <div id="interactive-prototype">
+                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fg1tXkHHChjyNEs63AG7rjh%2FSplitwise-Feature-Design-(public)%3Fpage-id%3D321%253A1562%26type%3Ddesign%26node-id%3D555-1812%26viewport%3D-468%252C-86%252C0.27%26t%3DUmL2dw9ue8BygXPA-1%26scaling%3Dscale-down%26starting-point-node-id%3D555%253A1812%26show-proto-sidebar%3D1%26mode%3Ddesign" allowfullscreen></iframe>
+                        <p class="caption-analysis">Use <strong>fullscreen</strong> for better use of prototype.</p>
+                    </div>
                 </div>
             </section>
 
