fixing broken link

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <h3>POV: You're a Karamatsu Girl</h3>
                         <p class="project-description">A fanmade 3D Music Video made in Autodesk Maya made for a 3rd year university course</p>
                         
-                        <a href="karamatsu.html" class="label-button">View Karamatsu Girl</a>
+                        <a href="Karamatsu.html" class="label-button">View Karamatsu Girl</a>
                     </div>
 
                     <div class="project-img project-item " id="iframe-container">
