--- a/summerfest.html
+++ b/summerfest.html
@@ -150,7 +150,7 @@
                             </figure>
                     </div>
                     <h3>Motion Graphics</h3>
-                    <p>As my interest in motion graphics grew, I also volunteered to create different promotional videos for the event as well, namely creating a video celebrating the event's 10th anniversary (click <a href="https://www.youtube.com/watch?v=pKl89KqK18U" class="in-text-link" target="_blank">here</a> to watch the full video) and animating the event poster using techniques similar to the one I created for <a href="icebreaker.html" class="in-text-link" target="_blank">the SFU Anime Club's Icebreaker.</a> </p>
+                    <p>As my interest in motion graphics grew, I also volunteered to create different promotional videos for the event as well, namely creating a video celebrating the event's 10th anniversary (click <a href="https://www.youtube.com/watch?v=pKl89KqK18U" class="in-text-link" target="_blank">here</a> to watch the full video).</p>
 
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img/summerfest/Summerfest_OnlineTeaser.webm" src="img/summerfest/Summerfest_OnlineTeaser_100.png" autoplay loop playsinline muted aria-label="The Summer Festival 2019 Teaser" controls="controls"></video>
@@ -352,7 +352,7 @@
                         <p class="project-type">3D Modelling/Animation - Award Winning</p>
                         <h3>POV: You're a Karamatsu Girl</h3>
                         <p class="project-description">A fanmade 3D Music Video made in Autodesk Maya made for a 3rd year university course</p>
-                        <a href="karamatsu.html" class="label-button">View POV: You're a Karamatsu Girl</a>
+                        <a href="Karamatsu.html" class="label-button">View POV: You're a Karamatsu Girl</a>
                     </div>
                     <div class="project-img project-item" id="iframe-container">
                         <iframe src="https://www.youtube.com/embed/P-Jd2lbXlTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
