New project file and added text to Fureverhome
Added new file for 88rising project, added text to Fureverhome, changes to about page and fixes for Splitwise project prototype having responsive issue on mobile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="main-banner">
             <div>
                 <h1 class="reveal-text">Hello, I'm Luke.</h1>
-                <p class="text-box">A Motion and UI/UX Designer based in Vancouver, BC - Currently with <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">SFU Summer Festival</a> and <a href="https://www.facebook.com/anitrendzplus" class="in-text-link" target="_blank">Anime Trending+</a>. With previous experience at <a href="https://www.fraserhealth.ca/" class="in-text-link" target="_blank">Fraser Health</a></p>
+                <p class="text-box">A Product and UI/UX Designer based in Vancouver, BC - Currently with <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">SFU Summer Festival</a> and <a href="https://www.facebook.com/anitrendzplus" class="in-text-link" target="_blank">Anime Trending+</a>. With previous experience at <a href="https://www.fraserhealth.ca/" class="in-text-link" target="_blank">Fraser Health</a></p>
             </div>
         </section>
     </header>
