Finished Fureverhome and minor changes to other site
- Changes to fureverhome's project files due to text sizing issues
- Uploaded additional content for fureverhome page
- Fixed issues with image naming in index and summerfest ( header fix coming soon)

--- a/88rising.html
+++ b/88rising.html
@@ -59,7 +59,7 @@
                             <div class="grid project-roles">
                                 <div class="col-1">
                                     <p class="role-type">The Team</p>
-                                    <p class="role-details">Justin Yu</p>
+                                    <p class="role-details"><a href="https://www.justinyu.design/" class="in-text-link" target="_blank">Justin Yu</a></p>
                                     <p class="role-details">Alex Luowan</p>
                                     <p class="role-details">Claret Egwim-Nwagbara</p>
                                     <p class="role-details">Terrence Xu</p>
