--- a/index.html
+++ b/index.html
@@ -49,24 +49,24 @@
                     <!-- left side -->
                     <div class="project-details project-item">
                         <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
-                        <h3>Fureverhome</h3>
+                        <h3>FurEverHome</h3>
                         <p class="project-description">A fictional application dedicated to support new and current rescued dog owners.</p> 
                         <a href="#" class="label-button">Coming soon 👀!!</a>
                     </div>
                     <!-- right side -->
                     <div class="project-img project-item static-img">
                         <figure>
-                            <img alt="Splitiwse Banner image" class="lazy js-off" src="img/fureverhome/Fureverhome_banner_100.png"
-                            data-src="img/fureverhome/Fureverhome_banner_400.png"
-                            data-srcset="img/fureverhome/Fureverhome_banner_400.png 400w,
-                                         img/fureverhome/Fureverhome_banner_800.png  800w,
-                                         img/fureverhome/Fureverhome_banner_1080.png 1080w"
+                            <img alt="FurEverHome Banner image" class="lazy js-off" src="img\fureverhome\FureverhomeBanner_100.jpg"
+                            data-src="img\fureverhome\FureverhomeBanner_400.jpg"
+                            data-srcset="img\fureverhome\FureverhomeBanner_400.jpg 400w,
+                                         img\fureverhome\FureverhomeBanner_800.jpg 800w,
+                                         img\fureverhome\FureverhomeBanner_1080.jpg 1080w"
                             data-sizes="100w">
                             <noscript>
-                                <img src="img/fureverhome/Fureverhome_banner_400.png" alt="Splitiwse Banner image"
-                                srcset="img/fureverhome/Fureverhome_banner_400.png 400w,
-                                        img/fureverhome/Fureverhome_banner_800.png   800w,
-                                        img/fureverhome/Fureverhome_banner_1080.png  1080w" 
+                                <img src="img\fureverhome\FureverhomeBanner_400.jpg" alt="FurEverHome Banner image"
+                                srcset="img\fureverhome\FureverhomeBanner_400.jpg 400w,
+                                        img\fureverhome\FureverhomeBanner_800.jpg 800w,
+                                        img\fureverhome\FureverhomeBanner_1080.jpg 1080w" 
                                 sizes="(min-width: 74rem) 50vw, 100vw"
                                 >
                             </noscript>
@@ -82,7 +82,7 @@
                     
                     <div class="project-img">
                         <figure>
-                            <video class="lazy js-off" width="1920" height="1080" data-src="img/summerfest/poster_reveal.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" controls="controls">
+                            <video class="lazy js-off" width="1920" height="1080" data-src="img/summerfest/poster_reveal.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail">
                             </video>
                             <img alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" class="lazy js-off" src="img/summerfest/SummerFest_100.jpg"
                             data-src="img/summerfest/SummerFest_400.jpg"
@@ -91,7 +91,7 @@
                             data-sizes="100w">
 
                             <noscript>
-                                <video src="img/summerfest/poster_reveal.webm" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" controls="controls"></video> 
+                                <video src="img/summerfest/poster_reveal.webm" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"></video> 
                             
                                 <img src="img/summerfest/SummerFest_400.jpg" alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"
                                 srcset="img/summerfest/SummerFest_400.jpg 400w,
@@ -133,8 +133,8 @@
                             <noscript>
                                 <img src="img/Splitwise/Splitwise_banner_400.png" alt="Splitiwse Banner image"
                                 srcset="img/Splitwise/Splitwise_banner_400.png 400w,
-                                        img/Splitwise/Splitwise_banner_800.png   800w,
-                                        img/Splitwise/Splitwise_banner_1080.png  1080w" 
+                                        img/Splitwise/Splitwise_banner_800.png 800w,
+                                        img/Splitwise/Splitwise_banner_1080.png 1080w" 
                                 sizes="(min-width: 74rem) 50vw, 100vw"
                                 >
                             </noscript>
