fixing small typo

--- a/Fureverhome.html
+++ b/Fureverhome.html
@@ -100,7 +100,6 @@
                         </noscript>
                         <figcaption class="caption-analysis">Insights gathered through interviews </figcaption>
                     </figure> 
-                    <!-- insert user persona -->
                     <figure class="figure-analysis project-img static-img" >
                         <img alt="Persona image of Natalie (Intended User)" class="lazy js-off" src="img\fureverhome\PersonaN_100.jpg"
                         data-src="img\fureverhome\PersonaN_400.jpg"
@@ -303,7 +302,6 @@
 
                 <div class="Introducing FurEverHome">
                     <h2>Introducing FurEverHome</h2>
-                    <!-- Insert video -->
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img\fureverhome\fureverhome_pitch.mp4" src="img\fureverhome\FureverhomeBanner_100.jpg" loop playsinline aria-label="FurEverHome's pitch video" controls="controls"></video>
                         <img alt="After Effects puppet tool"class="lazy js-off" src="img/2021_Icebreaker/ayumi_hand_100.png"
@@ -322,7 +320,7 @@
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">The puppet tool in action</figcaption>
+                        <figcaption class="caption-analysis">FurEverHome's Pitch Video - Click on video to play</figcaption>
                     </figure>
 
                     <p>Aiming to support both new and current rescued dog owners through working alongside local shelters and organizations such as the BC SPCA, we came up with "FurEverHome", the first app of its kind that focuses on making sure every rescued dog receives the love, care, and attention they deserve. View the pitch video <a href="https://youtu.be/TkZZVFSmbB4?si=Hxq4GFms7i4oFG6Q" class="in-text-link" target="_blank">here</a> if you're on mobile!</p>
@@ -403,7 +401,8 @@
 
             <section class="project-analysis" id="Keytakeaways">
                 <h2>Reflection</h2>
-                <p>As my first real UI/UX project that I have done in my academic career, I’m really proud of what my teammates and I were able to achieve, gaining both praise from fellow classmates and the teaching team during our final showcase. I was able to learn how to efficiently prototype a fully functional prototype application using Figma's components (avoiding the tedious process of connecting the same link over and again D:). I also learned how to collaborate within a team when working on developing a UI/UX application, especially keeping each other informed, and most importantly working together to overcome challenges we encountered basing our decisions on our research and user’s insights.</p>
+                <p>As my first real UI/UX project that I have done in my academic career, I’m really proud of what my teammates and I were able to achieve, gaining both praise from fellow classmates and the teaching team during our final showcase. I was able to learn how to efficiently prototype a fully functional prototype application using Figma's components (avoiding the tedious process of connecting the same link over and again D:).</p>
+                <p>I also learned how to collaborate within a team when working on developing a UI/UX application, especially keeping each other informed, and most importantly working together to overcome challenges we encountered basing our decisions on our research and user’s insights.</p>
             </section>
 
             <section class="more-project">
