--- a/88rising.html
+++ b/88rising.html
@@ -60,7 +60,7 @@
                                 <div class="col-1">
                                     <p class="role-type">The Team</p>
                                     <p class="role-details"><a href="https://www.justinyu.design/" class="in-text-link" target="_blank">Justin Yu</a></p>
-                                    <p class="role-details">Alex Luowan</p>
+                                    <p class="role-details"><a href="https://alexluowan.ca/" class="in-text-link" target="_blank">Alex Luowan</a></p>
                                     <p class="role-details">Claret Egwim-Nwagbara</p>
                                     <p class="role-details">Terrence Xu</p>
                                 </div>
