adding link to fureverhome to test path

--- a/88rising.html
+++ b/88rising.html
@@ -164,20 +164,22 @@
                     </figure>
                     <h3>Framing the issue</h3>
                     <p>After considering both the business and consumers’ perspectives, my teammates and I saw a missed opportunity for 88rising as many fans weren’t engaging and discovering more of 88rising’s roster due to many of their artists and collaborative content being scattered across different platforms. We believed that by leveraging 88rising’s unique Asian American identity and collaborative works from diverse artists across different cultural backgrounds, we could help fans discover and connect more with artists and provide artists with a piece of the spotlight they have lacked until now.</p>
-                    <figure class="project-img figure-analysis" id="color-theme">
-                        <img alt="Icebreaker color palette" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_palette_100.png"
-                        data-src="img/2021_Icebreaker/icebreaker_palette_400.png"
-                        data-srcset="img/2021_Icebreaker/icebreaker_palette_400.png 400w,
-                                     img/2021_Icebreaker/icebreaker_palette_600.png 600w"
+                    <figure class="project-img static-img figure-analysis">
+                        <img alt="Research Insights" class="lazy js-off" src="img/88rising/UserJourney_100.png"
+                        data-src="img\fureverhome\ResearchFindings_400.jpg"
+                        data-srcset="img\fureverhome\ResearchFindings_400.jpg 400w,
+                                     img\fureverhome\ResearchFindings_600.jpg 600w,
+                                     img\fureverhome\ResearchFindings_1080.jpg 1080w"
                         data-sizes="100w">
                         <noscript>
-                            <img src="img/2021_Icebreaker/icebreaker_palette_100.png" alt="Icebreaker color palette"
-                            srcset="img/2021_Icebreaker/icebreaker_palette_400.png 400w,
-                                    img/2021_Icebreaker/icebreaker_palette_600.png 600w" 
+                            <img src="iimg\fureverhome\ResearchFindings_100.jpg" alt="Research Insights"
+                            srcset="img\fureverhome\ResearchFindings_400.jpg 400w,
+                                    img\fureverhome\ResearchFindings_800.jpg 600w,
+                                    img\fureverhome\ResearchFindings_1080.jpg 1080w" 
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">Color palette inspired by the cherry blossom season</figcaption>
+                        <figcaption class="caption-analysis">Insights gathered through interviews </figcaption>
                     </figure> 
                     <!-- Insert user journey map here -->
                 </div>
