--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                         <h3>FurEverHome</h3>
                         <p class="project-description">A fictional application dedicated to support new and current rescued dog owners.</p> 
-                        <a href="#" class="label-button">Coming soon 👀!!</a>
+                        <a href="fureverhome.html" class="label-button">View FurEverHome</a>
                     </div>
                     <!-- right side -->
                     <div class="project-img project-item static-img">
